# django-dashboard

./: .gitignore  README.md  setup.cfg  setup.py
django_dashboard/: __init__.py
django_dashboard/templates/admin/: base.html
django_dashboard/utils/: version.py
