[metadata]
name = django-dashboard
author = Thomas Bisseling
author_email = thomasbisselinghall@gmail.nl
url = https://github.com/thomasBisseling/django-dashboard
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = false
python_requires = >=3.8
include_package_data = true
install_requires =
    Django>=2.2
packages = 
    django_dashboard
